# custom-field-analysis

./: .gitignore  Asana Project Fields(3).csv  Asana_Custom_Field_Audit_Sheet.csv  Pipfile  README.md  setup.cfg
fieldanalysis/: fieldanalysis.py  menu.py
fieldanalysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
projectupload/: LICENSE  pyproject.toml  setup.cfg
projectupload/src/: menu.py  projectupload.py
projectupload/src/asanaUtils/: client.py  projectFunctions.py
